2004-04-09  Dan Winship  <danw@ximian.com>

	* evolution.xml: Update for "New" changes. Move "New Window" into
	File menu.

2004-04-06  Not Zed  <NotZed@Ximian.com>

	* evolution-mail-message.xml: moved goto stuff to the view menu.

2004-03-31  William Jon McCann  <mccann@jhu.edu>

	* evolution-tasks.xml: 
	* evolution-calendar.xml: add missing labels to dock items.

2004-03-30  Chris Toshok  <toshok@ximian.com>

	[ part of fix for bug #53634 ]
	
	* evolution-addressbook.xml: remove the Tools submenu placeholder
	foo.

2004-03-22  Hari Prasad Nadig <hp@ndeepak.info>

	* evolution-calendar.xml: Naming issue resolved ( Bug 48293 )

2004-03-08  Radek Doulik  <rodo@ximian.com>

	* evolution-mail-message.xml: added filter junk command and
	menuitem, icon for MarkAsNotJunk

2004-02-25  Jeffrey Stedfast  <fejj@ximian.com>

	* evolution-mail-message.xml: Assign Delete and KP_Delete as
	accels for the MessageDelete menu item.

2004-02-23  Dan Winship  <danw@ximian.com>

	* my-evolution.xml: Remove (this was the Summary's UI file)

	* Makefile.am (XML_FILES): Remove my-evolution.xml

2004-02-11  Rodney Dawes  <dobey@ximian.com>

	* evolution-mail-message.xml: Add sender to Address Book, not
	Addressbook

2004-01-26  David Trowbridge <trowbrds@cs.colorado.edu>
 
 	* evolution.xml: added "Quick Reference" menu item
 
2004-01-27  Rodney Dawes  <dobey@ximian.com>

	* evolution-mail-message.xml: Enable [, ], ., and , as mail accels
	again, but not in the menus, so that GTK+ doesn't grab them from the
	search bar

2004-01-26  Rodney Dawes  <dobey@ximian.com>

	* evolution-addressbook.xml:
	* evolution-mail-global.xml:
	* evolution-mail-message.xml: Get rid of all the *Shift*character
	keybindings, so people can actually type things in the search bar,
	Just use *Control*basekey instead

	Fixes #41769

2004-01-23  Rodney Dawes  <dobey@ximian.com>

	* evolution-mail-list.xml: Fix Folder submenu location
	* evolution.xml: Add ComponentPlaceholder back to File menu

	Fixes #51960
